// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactHashtag should behave Should render custom hashtags 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <div>
    <Hashtag
      renderHashtag={[Function]}
    >
      #lots #of #hashtags
    </Hashtag>
  </div>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Hashtag
        renderHashtag={[Function]}
      >
        #lots #of #hashtags
      </Hashtag>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": "#lots #of #hashtags",
        "renderHashtag": [Function],
      },
      "ref": null,
      "rendered": "#lots #of #hashtags",
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Hashtag
          renderHashtag={[Function]}
        >
          #lots #of #hashtags
        </Hashtag>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "#lots #of #hashtags",
          "renderHashtag": [Function],
        },
        "ref": null,
        "rendered": "#lots #of #hashtags",
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ReactHashtag should behave Should render hashtags 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <div>
    <Hashtag>
      Hello #there fellow #dude#Works?
    </Hashtag>
  </div>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Hashtag>
        Hello #there fellow #dude#Works?
      </Hashtag>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": "Hello #there fellow #dude#Works?",
      },
      "ref": null,
      "rendered": "Hello #there fellow #dude#Works?",
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Hashtag>
          Hello #there fellow #dude#Works?
        </Hashtag>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Hello #there fellow #dude#Works?",
        },
        "ref": null,
        "rendered": "Hello #there fellow #dude#Works?",
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
